# cmis_senario_games

./: .gitignore  README.md
configs/buldyrev2010/: italy_case_study.yaml
data/raw/: italy_comm_edges.csv  italy_comm_nodes.csv  italy_dep_mapping.csv  italy_power_edges.csv  italy_power_nodes.csv
docs/: README.md  design_cmis_senario_games.md  scenario_buldyrev2010.md  sim_contribution_design_v1.md
experiments/buldyrev2010/: italy_case_basic_run.yaml
sim_contribution/: README.md  pyproject.toml
sim_contribution/scripts/: run_one_season.py
sim_contribution/src/sim_contribution/: __init__.py  config.py
sim_contribution/src/sim_contribution/evaluation/: reporting.py  runner.py  types.py
sim_contribution/src/sim_contribution/indices/: empirical_interaction.py  pair_profile.py  types.py
sim_contribution/src/sim_contribution/log/: schema.py
sim_contribution/src/sim_contribution/observation/: noise.py  ranking.py  types.py
sim_contribution/src/sim_contribution/players/: param_generator.py  types.py
sim_contribution/src/sim_contribution/production/: comm_cost.py  diversity.py  team_value.py  types.py
sim_contribution/src/sim_contribution/schedule/: constraints.py  generator.py  types.py
sim_contribution/src/sim_contribution/strategies/: greedy_interaction.py  lexcel_weber_pairing.py  random_partition.py  types.py
sim_contribution/src/sim_contribution/viz/: dashboard.py  plots.py
src/cmis_senario_games/core/: cascade_engine.py  experiment_modes.py  experiment_runner.py  io_results.py
src/cmis_senario_games/scenarios/buldyrev2010/: config_schema.py  (+1 more)
(+2 files in other folders)
