[tool.poetry]
name = "sim-contribution"
version = "1.0.0"
description = "Simulation of observational interaction scores and team formation strategies"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "sim_contribution", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
